--- a/web/.gitignore
+++ b/web/.gitignore
@@ -29,6 +29,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 ### STS ###
 .apt_generated
 .classpath
