chore: Update to Arconia 0.2.0
Signed-off-by: Thomas Vitale <ThomasVitale@users.noreply.github.com>

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -8,6 +8,8 @@ arconia:
       source: properties
       tenants:
         - identifier: dukes
-          enabled: true
         - identifier: beans
-          enabled: true
+        - identifier: pixie
+          enabled: false
+          attributes:
+            status: onboarding
